# oci

./: .gitignore  AGENTS.md  README.md
inventory/: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  preflight.sh  pyproject.toml
inventory/.devcontainer/: devcontainer.json
inventory/.github/workflows/: ci.yml
inventory/.opencode/agents/: coordinator.md  docs-writer.md  finops-analyst.md  inv-build.md  inv-plan.md
inventory/config/: workers.yaml
inventory/docs/: architecture.md  architecture_visual_style.md  auth.md  cost_guidelines.md  diagram_guidelines.md  goals.md  planned.md  quickstart.md  report_guidelines.md
inventory/project/: diagram_guidelines.md  goals_structure.md  planned.md  releases.md
inventory/prompts/: projectplan.txt
inventory/src/oci_inventory/: __init__.py  cli.py  config.py  logging.py  report.py
inventory/src/oci_inventory/auth/: __init__.py  providers.py
inventory/src/oci_inventory/diff/: __init__.py  diff.py  hash.py
inventory/src/oci_inventory/enrich/: __init__.py  base.py  coverage.py  default.py  oci_metadata.py
inventory/src/oci_inventory/export/: __init__.py  csv.py  graph.py  (+5 more)
inventory/tasks/: mantainer.md
inventory/tests/: test_architecture_concepts.py  test_auth_errors.py  test_cli_run_schema.py  test_client_cache.py  test_compartments.py  test_concurrency.py  test_config.py  test_default_enricher.py  test_diagram_projections.py  test_diff.py  test_enrich_coverage.py  test_genai_chat_runner.py  test_genai_executive_summary.py  test_genai_list_models.py  test_genai_redaction.py  test_graph.py  test_hash.py  test_missing_type_enrichers.py  test_oci_metadata_enrichers.py  test_pagination.py  test_parquet.py  test_registry.py  test_relationships.py  test_report_md.py  test_serialization.py  test_wizard_config_file.py  test_wizard_plan.py
(+732 files in other folders)
